2008-02-24  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c (print_image): added missing call to
	gtk_print_operation_set_unit().

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c: use GTK_STOCK_PAGE_SETUP when compiled
	against GTK+ >= 2.13.0.

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c: added support for grayscale
	images so we don't need to go through an extra export step.

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print.c
	* plug-ins/print/print-draw-page.[ch]: code cleanup.

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tileit.c
	* plug-ins/common/warp.c
	* plug-ins/common/struc.c: fixed the same problem as in the Wind
	plug-in here as well (see bug #516369).

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c (draw_page_cairo): when
	printing an image with alpha channel, use a Cairo surface with
	alpha channel instead of doing a blend on a white background.

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-draw-page.c (draw_page_cairo): access the
	pixels tile-by-tile instead of row-by-row.

2008-02-22  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/wind.c (render_wind) (render_blast): fixed calls
	to gimp_drawable_mask_intersect() which was causing a crash as
	reported in bug #516369.

2008-02-21  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-actions.c (plug_in_actions_history_changed):
	don't call plug_in_actions_update() because that updated the
	sensitivity of *all* plug-in actions according to the properties
	of the *current* image. Instead, look up the original GtkAction of
	the history items of *this* action group and copy the sensitivity
	from that action. Fixes bug #517683.

2008-02-21  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/app.pl (marshal_outargs): insert a missing newline
	for procedures without additional return values.

	* tools/pdbgen/pdb/display.pdb: cosmetics.
